--- a/accordian/src/components/accordian/styles.css
+++ b/accordian/src/components/accordian/styles.css
@@ -10,6 +10,11 @@
 
 .wrapper button{
     padding: 10px 20px;
+    background: black;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer
 }
 .accordian{
     width: 500px;
